# contests

Codeforces/Educational-156/: README.md  fearOfTheDark.hs  sumOfThree.hs  test.sh
Kaggle/: .gitignore  pyproject.toml
Kaggle/cmi/: README.md  eda.ipynb  model-lstm.ipynb  model-rnn.ipynb  submission.ipynb
ProjectEuler/: Problem_0.typ  Problem_01.typ  Problem_03.hs  Problem_04.hs  Problem_05.hs  Problem_06.hs  Problem_07.hs  Problem_08.hs  Problem_09.hs  Problem_1.typ  Problem_10.hs  Problem_11.hs  Problem_2.hs  Problem_3.hs
Protohackers/: shell.nix
Protohackers/lib/: primetime.ex  webapp.ex
